# loop-class-closure-repro

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE_v1_0_0.md  pyproject.toml  requirements.txt
data/: SHA256SUMS  allowed_topological_multipliers.json  ckm_closure.json  electroweak_boson_masses.json  fermion_mass_closure.json  gauge_sector_origin.json  lambda_qcd_alpha_s_closure.json  lemma10_lambda_s_extension.json  lemma9_federer_extension.json  loop_class_library.json  loop_class_map.json  negative_controls.json  neutrino_sector_closure.json  observable_registry.json  phase_i_iv_bundle.json  prospective_cluster_registry.json  prospective_cluster_residuals.json  reclassification_cases.json  sye_y1_y5_canonical_regime.json
notes/: tuple_compiler_design.md
outputs/: R_hypothesis_per_observable_audit.json  audit_system_R_train_holdout.json  ckm_closure_recompute.json  ckm_compound_audit.json  cross_consistency_audit.json  electroweak_boson_masses_recompute.json  expected_output.txt  extracted_topology_tuples.json  federer_prefactor_lemma9_closure.json  fermion_mass_recompute.json  gauge_sector_origin_recompute.json  inter_annotator_protocol.json  lambda_qcd_alpha_s_recompute.json  loop_class_predictions.json  neutrino_sector_recompute.json  phase_i_iv_recompute.json  verify_A_s_baumann_crosscheck.json  verify_A_s_from_bounce.json  verify_Y_p_bbn_closure.json  verify_alpha_W_self_consistency.json  verify_alpha_em_pattern_consistency.json  verify_lemma10_lambda_s_closure.json  verify_m_tau_path_A_audit.json  verify_m_tau_path_D_normalization.json  (+14 more)
(+185 files in other folders)
